--- a/Views/Factura/Factura.cshtml
+++ b/Views/Factura/Factura.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<CONTROL_HERRAMIENTA_SUNCORP.Models.Empresa>
+﻿@model IEnumerable<CONTROL_HERRAMIENTA_SUNCORP.Models.Factura>
 
 @{
-    ViewBag.Title = "Empresa";
+    ViewBag.Title = "Factura";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -23,34 +23,34 @@
 
             <div class="panel panel-warning" style="font-size: 16px;">
                 <div class="panel-heading">
-                    <h4>Lista de Empresas</h4>
+                    <h4>Lista de Factura</h4>
 
                 </div>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
                 <div class="panel-body">
-                    <a class="btn btn-success" href="@Url.Action("Registrar", "Empresa")">Crear Nuevo</a>
+                    <a class="btn btn-success" href="@Url.Action("Registrarfactura", "Factura")">Crear Nuevo</a>
                     <hr />
                     <div class="table-responsive">
                         <table class="table table-striped">
                             <thead>
                                 <tr>
-                                    <th>RTN</th>
-                                    <th>Nombre empresa</th>
-                                    <th>Correo electronico</th>
+                                    <th>Numero factura</th>
+                                    <th>Usuario</th>
+                                    <th>Fecha compra</th>
                                     <th>Corporacion</th>
                                     <th>Fecha registro</th>
                                     <th style="width:150px"></th>
                                 </tr>
                             </thead>
                             <tbody>
-                                @foreach (CONTROL_HERRAMIENTA_SUNCORP.Models.Empresa item in Model)
+                                @foreach (CONTROL_HERRAMIENTA_SUNCORP.Models.Factura item in Model)
                                 {
                                     <tr>
-                                        <td>@item.RTN</td>
-                                        <td>@item.NOMBRE_EMPRESA</td>
-                                        <td>@item.CORREO_ELECTRONICO</td>
+                                        <td>@item.NUMERO_FACTURA</td>
+                                        <td>@item.USUARIO_BD</td>
+                                        <td>@item.FECHA_COMPRA</td>
                                         <td>@item.CORPORACION.NOMBRE_CORPORACION</td>
                                         <td>@item.FECHA_REGISTRO</td>
                                         <td>
